--- a/.github/workflows/buildDevelop.yml
+++ b/.github/workflows/buildDevelop.yml
@@ -5,13 +5,11 @@ name: Build with Peass develop branch
 
 on:
   push:
-    branches: [ main ]
+    branches: [ develop ]
   pull_request:
-    branches: [ main ]
+    branches: [ develop ]
   workflow_dispatch:
-    branches: [ main ]
-  schedule:
-    - cron: "0 */8 * * *"
+    branches: [ develop ]
 
 jobs:
   build:
