--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,3 @@
-demo-project-compile-error
-demo-project-compile-error_peass
-peass
+/demo-project-compile-error
+/demo-project-compile-error_peass
+/peass
